--- a/index.css
+++ b/index.css
@@ -9,6 +9,23 @@ body{
   height: 100vh;
   width: 100vw;
 }
+.menu-icon{
+  position: absolute;
+  font-size: 2em;
+  color: white;
+  background-color: #257dc9;
+  height: 3rem;
+  width: 3rem;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  margin: 0.5rem;
+  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.493);
+  cursor: pointer;
+
+}
 .menu-container{
   height: 100vh;
   width: 18rem;
@@ -25,13 +42,23 @@ form {
   background-color: #257dc9;
   padding: 1rem;
 }
-form > input{
+form input{
   background-color: transparent;
   border: none;
   border-bottom: 2px solid white;
   width: 100%;
   color: white;
   border-radius: 0%;
+}
+.close-icon{
+  font-size: 1.5em;
+  color: white;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+form > div {
+  display: flex;
+  align-items: center;
 }
 ::placeholder {
   color: rgba(255, 255, 255, 0.61);
@@ -45,15 +72,27 @@ input:focus{
   margin: 0.5rem 0;
 }
 ul{
-  padding: 0 1rem;
+  padding: 0;
   overflow: scroll;
   height: 100vh;
 }
 li{
+  padding: 1rem;
   list-style-type: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.39);
   padding-top: 1rem;
 }
 li h5{
+  cursor: pointer;
   text-transform: capitalize;
+}
+li h5:hover{
+  text-decoration: underline;
+  color: #257dc9;
+}
+
+@media only screen and (max-width: 600px) {
+  .menu-icon {
+    box-shadow: none;
+  }
 }
