--- a/index.css
+++ b/index.css
@@ -1,15 +1,15 @@
-body{
+body {
   margin: 0;
   padding: 0;
 }
-.main-page{
+.main-page {
   display: flex;
 }
-#map{
-  height: 100vh;
+#map {
+  height: 90vh;
   width: 100vw;
 }
-.menu-icon{
+.menu-icon {
   position: absolute;
   font-size: 2em;
   color: white;
@@ -22,12 +22,11 @@ body{
   justify-content: center;
   z-index: 1000;
   margin: 0.5rem;
-  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.493);
+  box-shadow: 12px 0px 10px 0px rgba(0, 0, 0, 0.493);
   cursor: pointer;
-
 }
-.menu-container{
-  height: 100vh;
+.menu-container {
+  height: 90vh;
   width: 18rem;
   position: absolute;
   background-color: white;
@@ -42,7 +41,7 @@ form {
   background-color: #257dc9;
   padding: 1rem;
 }
-form input{
+form input {
   background-color: transparent;
   border: none;
   border-bottom: 2px solid white;
@@ -50,7 +49,7 @@ form input{
   color: white;
   border-radius: 0%;
 }
-.close-icon{
+.close-icon {
   font-size: 1.5em;
   color: white;
   margin-right: 1rem;
@@ -63,32 +62,51 @@ form > div {
 ::placeholder {
   color: rgba(255, 255, 255, 0.61);
 }
-input:focus{
+input:focus {
   outline: none;
 }
-.form-control, .btn{
+.form-control,
+.btn {
   height: 2rem;
   padding: 0 0.3rem;
   margin: 0.5rem 0;
 }
-ul{
+ul {
   padding: 0;
   overflow: scroll;
-  height: 90vh;
+  height: 509px;
 }
-li{
+li {
   padding: 1rem;
   list-style-type: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.39);
   padding-top: 1rem;
 }
-li h5{
+li h5 {
   cursor: pointer;
   text-transform: capitalize;
 }
-li h5:hover{
+li h5:hover {
   text-decoration: underline;
   color: #257dc9;
+}
+.main-page,
+.menu-container,
+.map-container,
+#map {
+  max-height: 90vh;
+}
+
+footer{
+  background-color: #257dc9;
+  height: 10vh;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer > p {
+  font-size: 0.7rem;
 }
 
 @media only screen and (max-width: 600px) {
